--- a/Grupo DGT/javi.css
+++ b/Grupo DGT/javi.css
@@ -1,6 +1,6 @@
 body{
     color: white;
-    background-color:  white;
+    background-color:  blue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
@@ -34,10 +34,50 @@ table {
 
 }
 
+/*
 td {
 
     /*border: solid 5px rgba(255, 255, 255, 0.2);*/
-    border: 5px black;
+ /*   border: 5px black;
+}*/
 
-
+.container {
+	/*border: solid 3px rgba(255,255,255,0.2);*/
+	border: solid 8px rgba(255,255,255,0.2);
 }
+
+/*
+table {
+	color: #fff;
+	font-size: 16 px;
+	table-layout: fixed;
+	border-collapse: collapse;
+}*/
+
+thead {
+	background: rgba(243, 140, 210, 0.4);
+}
+
+th {
+	padding: 20px 15px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+td {
+	border: solid 1px rgba(255, 255, 255, 0.2);
+
+	/*padding: 15px;
+	border-bottom: solid 1px rgba(255, 255, 255, 0.2);*/
+}
+
+/*
+tbody tr {
+	cursor: pointer;
+}
+
+
+tbody tr:hover {
+    background: rgba(243, 140, 210, 0.4);
+}
+*/
