--- a/Grupo DGT/javi.css
+++ b/Grupo DGT/javi.css
@@ -1,6 +1,6 @@
 body{
     color: white;
-    background-color:  white;
+    background-color:  gray;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
@@ -37,6 +37,6 @@ table {
 td {
 
     /*border: 5px, black;*/
-    border: solid 2px rgba(174, 35, 174, 0.2);
+    border: solid 2px rgba(174, 235, 174, 0.2);
 
 }
