--- a/Grupo DGT/Estilos.css
+++ b/Grupo DGT/Estilos.css
@@ -14,7 +14,7 @@ h1{
 h2{
     color: rgb(46, 151, 151);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 20px; /* Letra de tamaño fijo */
     font-style: italic;
 }
 
