--- a/Grupo DGT/Gabriel.css
+++ b/Grupo DGT/Gabriel.css
@@ -8,4 +8,13 @@ body{
 button {
     height: 50px;
     width: 200px;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+    color: rgb(0, 0, 0);
+    background-color: white;
+    border-style: dashed;
+    display: block;
+    display: inline-block;
+    cursor: pointer;
 }
