--- a/Roberto y Raul/ASPIRINAA.CSS
+++ b/Roberto y Raul/ASPIRINAA.CSS
@@ -1,8 +1,10 @@
+
+
 body {
     /*background-color:59A9FF;*/
     background:linear-gradient(to top right,red,#313173,green);
     background-repeat: no-repeat;
 
 font-family:helvetica;
-    color:white;
+    color:rgb(2, 2, 2);
 }
